# llm-firewall

./: .gitignore  Cargo.toml  LICENSE
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  rules.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: lib.rs  provider.rs  types.rs
crates/http/: Cargo.toml
crates/http/src/: lib.rs
crates/lambda/: Cargo.toml
crates/lambda/src/: main.rs
infra/: Dockerfile
