[workspace]
members = [
    "crates/core",
    "crates/http",
    "crates/cli",
    "crates/lambda"
]
resolver = "2"

[workspace.dependencies]   # shared deps (optional)
hyper       = "1"
axum        = "0.7"
tokio       = { version = "1", features = ["full"] }
serde       = { version = "1", features = ["derive"] }
tower       = { version = "0.5", features = ["full"] }
serde_json  = "1"
anyhow      = "1"
regex       = "1"