[package]
name    = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow      = { workspace = true }
async-trait = "0.1"
reqwest     = { version = "0.12", features = ["stream", "json"] }
serde       = { workspace = true }
serde_json  = { workspace = true }
bytes       = "1"
http        = "1"
